@@ -4,6 +4,8 @@ CHANGE LOG
 
 Changes up to 0.98
 
+   * huge performance boost for large systems/heavily loaded PyMOL
+
    * ray_direct_shade setting 
 
    * adjusted povray camera and light settings
